# news

./: .gitignore  pyproject.toml  setup.py
dashboard/app/: app.py  index.py
dashboard/app/components/: navigation.py  sidebar.py  wrappers.py
dashboard/app/views/: __init__.py
dashboard/app/views/feed/: dashboard.py
dashboard/app/views/overview/: dashboard.py
dashboard/app/views/parse/: dashboard.py
news/: __init__.py  config.py
news/data/: CONSTANTS.py  articles.py  gdelt.py  io.py
news/db/crud/: __init__.py  article.py  author.py  base.py  domain.py  event.py  ner.py  quote.py  relation.py
news/db/db/: base.py  doc.py  init_db.py  session.py
news/db/models/: __init__.py  article.py  author.py  domain.py  event.py  ner.py  quote.py  relation.py  utils.py
news/doc/: add.py  db.py  import.py  index.py
news/geo/: events.py
news/kg/: wikidata.py
news/nlp/: booknlp.py  embedding.py  embeddings.py  quote.py  tagging.py  topic.py
news/plot/: color.py  layout.py  map.py  timeseries.py
news/process/: add.py  country.py  db.py  events.py  index.py
notebooks/: Annlite.ipynb  Untitled.ipynb  bertopic.ipynb  booknlp.ipynb  embed_docarray.ipynb
scripts/: 2_fetch_gdelt_articles.py  3_add_articles_to_doc_store.py  4_index_docs.py  create_article_table.py  create_tags.py  dump_gdelt_events2db.py  fetch_gdelt_articles.py  run_bertopic.py
